--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -389,7 +389,9 @@ services:
     postgres:
       build: ./postgres
       volumes:
-        - ${DATA_PATH_HOST}/postgres:/var/lib/postgresql/data
+#        - ${DATA_PATH_HOST}/postgres:/var/lib/postgresql
+#        - pgdata:/postgres:/var/lib/postgresql/data
+        - /var/lib/postgresql/data
         - ${POSTGRES_ENTRYPOINT_INITDB}:/docker-entrypoint-initdb.d
       ports:
         - "${POSTGRES_PORT}:5432"
